--- a/index1.html
+++ b/index1.html
@@ -111,9 +111,9 @@ h3{
 <body>
 
     <div class="topnav">
-        <a  href="simple_calc.html">Calculator</a>
-        <a class="active" href="simple_interest.html">Simple Interest Calculator</a>
-        <a href="compound.html">Compound Interest Calculator</a>
+        <a  href="index.html">Calculator</a>
+        <a class="active" href="index1.html">Simple Interest Calculator</a>
+        <a href="index2.html">Compound Interest Calculator</a>
         
       </div>
 
