--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@ display:inline-block;
   </style>
 <body>
   <div class="topnav">
-    <a class="active" href="simple_calc.html">Calculator</a>
-    <a href="simple_interest.html">Simple Interest Calculator</a>
-    <a href="compound.html">Compound Interest Calculator</a>
+    <a class="active" href="index.html">Calculator</a>
+    <a href="index1.html">Simple Interest Calculator</a>
+    <a href="index2.html">Compound Interest Calculator</a>
     
   </div>
     <div class="cont" >
