--- a/index2.html
+++ b/index2.html
@@ -106,9 +106,9 @@ h3{
 }
 </style>
 <div class="topnav">
-    <a  href="simple_calc.html">Calculator</a>
-    <a href="simple_interest.html">Simple Interest Calculator</a>
-    <a class="active" href="compound.html">Compound Interest Calculator</a>
+    <a  href="index.html">Calculator</a>
+    <a href="index1.html">Simple Interest Calculator</a>
+    <a class="active" href="index2.html">Compound Interest Calculator</a>
     
   </div>
 <body>
